implentado el sign-up

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -21,7 +21,13 @@
       .option {
         padding: 10px 15px;
         cursor: pointer;
+
+        
+        &.user {
+          color: #d83b1c;
+        }
       }
+      
     }
   }
   
